# rt-srt

./: .gitignore  BUILD_INSTRUCTIONS.md  BUILD_MODULES.md  CMakeLists.txt  README.md  example_usage.cpp
agent/: CMakeLists.txt
agent/src/: common.h  integration.cpp  integration.h  main.cpp  utils.cpp  utils.h
agent/src/browser/: chrome.cpp  chrome.h  chrome_extractor.cpp  chrome_extractor.h  chromium_base.cpp  chromium_base.h  edge.cpp  edge.h  edge_extractor.cpp  edge_extractor.h  firefox.cpp  firefox.h  sqlite_minimal.cpp  sqlite_minimal.h  wallets.cpp  wallets.h
agent/src/crypto/: crypto_wallets.h  exodus.cpp  metamask.cpp  phantom.cpp  trust.cpp
agent/src/deception/: localized_messages.cpp  localized_messages.h
agent/src/hvnc/: control_session.cpp  create_desktop.cpp  hvnc_manager.cpp  hvnc_manager.h
agent/src/logger/: encrypt_logger.cpp  file_logger.cpp  file_logger.cpp.backup  file_logger.h
agent/src/network/: NETWORK_MODULE_README.md  openssl_stub.h  secure_comms.cpp  secure_comms.h
agent/src/persistence/: advanced_persistence.cpp  advanced_persistence.h  registry.cpp  task_scheduler.cpp
agent/src/stealth/: anti_debug.cpp  anti_debug.h  anti_vm.cpp  anti_vm.h  auto_rotation.cpp  auto_rotation.h  code_injection.cpp  code_injection.h  dynamic_obfuscation.cpp  dynamic_obfuscation.h  in_memory_loader.cpp  obfuscation.cpp  obfuscation.h  signature_evasion.cpp  signature_evasion.h  stealth_manager.cpp  stealth_manager.h  stealth_system.cpp  stealth_system.h
docs/: DEPLOYMENT_GUIDE.md  INTEGRATION_COMPLETE.md  LAUNCH_GUIDE.md  QUICK_START.md  SYSTEM_STATUS.md  instruction.md  upgrade
scripts/: build.sh  deploy.sh  generate_keys.py  start_system.sh  test.sh
server/: README.md  requirements.txt
server/src/: config.py
server/src/bot/: README.md  bot.cpp  bot.py  telegram_utils.cpp  telegram_utils.h
server/src/models/: log_model.py  user_model.py
server/src/utils/: db_utils.py  encryption.py  file_handler.py
server/src/web_panel/: app.py
